[package]
name = "image-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-cors = "0.6.1"
dotenv = "0.15"
derive_more = "0.99.17"
serde = { version = "1.0", features = ["derive"] }
image = { version = "0.24.2", features = ["gif", "png"] }
reqwest = "0.11.11"